--- a/packages/contracts/starkwars/Scarb.toml
+++ b/packages/contracts/starkwars/Scarb.toml
@@ -6,11 +6,12 @@ edition = "2024_07"
 # See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest.html
 
 [dependencies]
-starknet = "2.9.1"
+starknet.workspace = true
+openzeppelin_access.workspace = true
 
 [dev-dependencies]
-snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.34.0" }
-assert_macros = "2.9.1"
+snforge_std.workspace = true
+assert_macros.workspace = true
 
 [[target.starknet-contract]]
 sierra = true
