--- a/packages/contracts/starkwars/Scarb.toml
+++ b/packages/contracts/starkwars/Scarb.toml
@@ -8,6 +8,7 @@ edition = "2024_07"
 [dependencies]
 starknet.workspace = true
 openzeppelin_access.workspace = true
+openzeppelin_upgrades.workspace = true
 
 [dev-dependencies]
 snforge_std.workspace = true
