--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,13 @@ node_modules
 .env.production
 .spr.yml
 packages/contracts/starkwars/target/
+.snfoundry_cache/.prev_tests_failed
 target/dev/starkwars_StarkWars.contract_class.json
+target/dev/starkwars_integrationtest_StarkWars.test.contract_class.json
+target/dev/starkwars_integrationtest.test.json
+target/dev/starkwars_integrationtest.test.sierra.json
+target/dev/starkwars_integrationtest.test.starknet_artifacts.json
+target/dev/starkwars_unittest_StarkWars.test.contract_class.json
+target/dev/starkwars_unittest.test.json
+target/dev/starkwars_unittest.test.sierra.json
+target/dev/starkwars_unittest.test.starknet_artifacts.json
